--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+# DATABASE CONFIGURATION
+spring.jpa.hibernate.ddl-auto=update
 
+#heroku
+#spring.jpa.database=postgresql
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/gamesjar?serverTimezone=Europe/Warsaw&allowPublicKeyRetrieval=true&useSSL=False
+spring.datasource.username=skorpien
+spring.datasource.password=sabziro
+
+management.endpoints.web.exposure.include=*
+
+
+# ADMINISTRATION
+admin.name = Skorpien
+admin.mail = jkubik87@gmail.com
+
+# ACTUATOR INFO
+info.app.name=Tasks Application
+info.app.description=Application has been created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=John
+info.app.owner.surname=Doe
+info.administrator.email=john.dore@test.com
+info.administrator.adress.street=Super Cool Street
+info.administrator.adress.number=42
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place!
+info.company.email=tasks@crud.com
+info.company.phone=744489230
