Add communicator, weather API and bgg search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-# DATABASE CONFIGURATION
-spring.jpa.hibernate.ddl-auto=update
+server.port=8083
 
 #heroku
 #spring.jpa.database=postgresql
@@ -7,6 +6,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
 #spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
+# DATABASE CONFIGURATION
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/gamesjar?serverTimezone=Europe/Warsaw&allowPublicKeyRetrieval=true&useSSL=False
@@ -15,21 +16,9 @@ spring.datasource.password=sabziro
 
 management.endpoints.web.exposure.include=*
 
+#API
+weather.api.endpoint.prod=http://api.openweathermap.org/data/2.5/weather
+weather.app.city=Wroclaw
+weather.app.key=dc7857a1104387cd2ab90604d82b1caf
 
-# ADMINISTRATION
-admin.name = Skorpien
-admin.mail = jkubik87@gmail.com
 
-# ACTUATOR INFO
-info.app.name=Tasks Application
-info.app.description=Application has been created on Kodilla course!
-info.app.version=1.0.0
-info.app.owner.name=John
-info.app.owner.surname=Doe
-info.administrator.email=john.dore@test.com
-info.administrator.adress.street=Super Cool Street
-info.administrator.adress.number=42
-info.company.name=TaskCrudAppCreator
-info.company.goal=Our goal is to make the world a better place!
-info.company.email=tasks@crud.com
-info.company.phone=744489230
