--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 	compile group: 'com.google.api-client', name: 'google-api-client', version: '1.30.9'
 	compile 'com.google.apis:google-api-services-webmasters:v3-rev35-1.25.0'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
-	implementation 'org.springframework.cloud:spring-cloud-config-server'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+	//implementation 'org.springframework.cloud:spring-cloud-config-server'
 }
 
 dependencyManagement {
